# starmask

./: .gitignore  AstrometryDirectSolver.cpp  AstrometryDirectSolver.h  BackgroundExtractionWidget.cpp  BackgroundExtractionWidget.h  BackgroundExtractor.cpp  BackgroundExtractor.h  BrightStarDatabase.h  CMakeLists.txt  CatalogProgressDialog.h  ColorAnalysisDialog.cpp  ColorAnalysisDialog.h  FITS.cpp  GaiaGDR3Catalog.cpp  GaiaGDR3Catalog.h  GeometricAlgorithms.h  HardenedBackgroundExtractor.cpp  HardenedBackgroundExtractor.h  ImageDisplayWidget.cpp  ImageDisplayWidget.h  ImageReader.cpp  ImageReader.h  ImageReader_old.cpp  ImageStatistics.cpp  ImageStatistics.h  IntegratedPlateSolver.cpp  IntegratedPlateSolver.h  Local2MASSCatalog.h  MainWindow.cpp  MainWindow.h  MainWindow_old.cpp  PCLMockAPI.cpp  PCLMockAPI.h  PCLThreadMock.cpp  PCLThreadMock.h  PhotometryComparisonWidget.cpp  PixelMatchingDebugger.cpp  PixelMatchingDebugger.h  PlatesolverSettingsDialog.cpp  PlatesolverSettingsDialog.h  (+29 more)
integration/: CMakeLists.txt  OriginEnhancedParallelStellarSolver.h  OriginMetadataExtractor.cpp  OriginMetadataExtractor.h  OriginStellarSolverInterface.cpp  OriginStellarSolverInterface.h  OriginTIFFReader.h  OriginTIFFSolver.h  PracticalOriginIntegration.cpp  example.cpp  integration_guide.md  main.cpp
